<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Angkot Map</string>
    <string name="action_settings">Settings</string>
    <string name="dots">&#8230;</string>
    <string name="search">Search</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="location">Location</string>
    <string name="start_search">Start Search</string>
    <string name="results">Search Results</string>
    <string name="show_map">Show Map</string>
    <string name="route">Route</string>
	<string name="action_map_directions">Map Directions</string>
	<string name="settings">Pengaturan</string>
	<string name="cancel">Cancel</string>
	<string name="my_location">My Location</string>
	<string name="gps_alertdialog_title">Activate GPS</string>
	<string name="gps_alertdialog_content">GPS is currently disabled. You must enable GPS if you choose My Location</string>
	<string name="text_step_icon">Step Icon</string>
	<string name="text_step_description">Step Description</string>
	<string name="search_locations">Search Locations</string>
	<string name="angkot">Angkot</string>
	<string name="angkot_image">Angkot Image</string>
	<string name="angkot_number">Angkot Number</string>
	<string name="angkot_color">Angkot Color</string>
	<string name="angkot_time">Angkot Time</string>
</resources>
